--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,6 +73,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=oR1yafwk&__jvst=Employee+Referral&__jvsd=s9qlOgwt&__jvsc=Twitter&bid=nORbnMwu'>MediaCom Careers - Senior Business Intelligence Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698316874-business-intelligence-analyst'>Correct Craft Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -141,7 +145,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qODaVfwg&k=Job&j=oK05afwJ&__jvst=Employee+Referral&__jvsd=syFYDhwA&__jvsc=Twitter&bid=ne7MlMwJ'>Abrigo Careers - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qODaVfwg&k=Job&j=oK05afwJ&__jvst=Employee+Referral&__jvsd=syFYDhwA&__jvsc=Twitter&bid=ne7MlMwJ'>Abrigo Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -166,7 +170,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -174,11 +178,11 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1893649'>Job Application for Business Intelligence Analyst at foodpanda Philippines</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1893649'>Job Application for Business Intelligence Analyst at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Philippines  Philippines Philippines</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235114-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235114-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -219,7 +223,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/indigo/jobs/1932595'>Job Application for Carbon Business Intelligence Analyst at Indigo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1932595'>Job Application for Carbon Business Intelligence Analyst at Indigo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... The Carbon Business Intelligence Analyst will bring structure and clear 
 governance to the collection and presentation of carbon data. We're looking for 
@@ -254,7 +258,7 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/asapp-2/7392fef8-6b2a-47f3-addd-1c9e20fec343/apply'>ASAPP - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/asapp-2/7392fef8-6b2a-47f3-addd-1c9e20fec343/apply'>ASAPP - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... BI Analyst Questions. Have you worked with BI tools for Analytical and 
 Explorative reporting? if so, which tools??. Are you familiar and comfortable with 
@@ -367,7 +371,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Austin Austin Austin</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -481,10 +485,6 @@ full time Business Intelligence (BI) analyst. The analyst will report within the
 <h5><a href='https://genesys.referrals.selectminds.com/jobs/business-analyst-business-intelligence-3985'>Business Analyst, Business Intelligence - Genesys Careers</a></h5> 
 <p><span class="badge badge-light">United States California</span></p>
 <p>Posted on: 2019-10-19</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwkaVfwF&k=Job&j=o67hbfwp&__jvst=Employee&__jvsd=syGWShwO&__jvsc=Twitter&bid=nboteMwx&jvi=o67hbfwp,Job&jvk=Job'>Schneider Electric - UK Careers - Software Business Intelligence Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-19</p>
 <hr/>
 
 
